--- a/config.yaml
+++ b/config.yaml
@@ -11,7 +11,7 @@ writeKey: TFacKtmQ5DyiALIChJ0gyyEiXqsz2dPz
 #
 
 name: Steven Miller
-role: Software Engineer
+role: Engineering Manager
 
 #
 # Social.
